			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

==================================
VERSION 5.5.39 (November 29, 2005)
==================================

  * FIXED: Bug#122: Crash in GC on last-call to an autoloaded procedure
    where the autoloader calls the garbage collector.  Fabien Todescato.

  * PORT: More Cygwin issues by Corinna Vinschen.

  * FIXED: library(occurs), occurrences_of_*() predicates to be thread-safe.

  * ADDED: Started package `nlp', providing some basics from the natural
    language processing and information retrieval community.  Currently
    stripping accents, Porter stem and Double Metaphone.

  * ADDED: library('clp/simplex') for solving linear programming problems.
    Contributed by Markus Triska.

  * FIXED: floor and ceil using rational numbers.  Markus Triska.

==================================
VERSION 5.5.38 (November 18, 2005)
==================================

  * FIXED: Add support for attributed variables in unify_with_occurs_check/2.
    Tom Schrijvers.

  * PORT: Added many patches for updated support for the Cygwin environment.
    Contributed by Corinna Vinschen, Redhat.  Work in progress.

  * FIXED: Possible crash in meta-calling large terms.  Matt Lilley.

  * FIXED: avoid loosing the next input character after abort.

  * FIXED: memory leak and off-by-one buffer overflow reading from the
    console through GNU readline.

  * ADDED: Ssetenc() to negotiate manipulation of stream encoding.  Used
    to protect encoding on plwin.exe as well as pce_open/3 for anything
    but socket-related streams.

  * FIXED: Bug#118: interaction numbervars and ignore_ops options in
    write_term.  Bart Demoen.


==================================
VERSION 5.5.37 (November 12, 2005)
==================================