@@ -99,6 +99,10 @@ unify_term(X, Y) :-
 	string(X),
 	is_list(Y),
 	string_to_list(X, Y), !.
+unify_term(_:X, Y) :-
+	unify_term(X, Y), !.
+unify_term(X, _:Y) :-
+	unify_term(X, Y), !.
 unify_term(X, Y) :-
 	format('[INTERNAL ERROR: Diff: ~q <-> ~q]~n', [X, Y]),
 	break.
