@@ -7,6 +7,11 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: library(listing) sending some of its output to current output
+    rather than the specified stream.
+
+  * ENHANCED: More flexible matching in library(prolog_clause).
+
 ==================================
 VERSION 5.5.39 (November 29, 2005)
 ==================================
